# NeuralConnections

./: .gitignore  README.md  setup.cfg
Code/: cli.py  compound.py  extra.py  profile_this.py  requirements.txt  ui.py
Code/assets/: connection.ui
Code/configs/: ca1_sub_high.cfg  ca1_sub_high_out.cfg  ca1_sub_low.cfg  ca1_sub_low_con.cfg  ca1_sub_vhigh.cfg  ca3_ca1.cfg  d3.cfg  do_methods_agree.cfg  no_variance.cfg  pmf_acc.cfg  probe_ca1_sub_full_high.cfg  probe_ca1_sub_full_low.cfg  probe_ca1_sub_full_med.cfg  probe_ca3_ca1_full.cfg  recurrent_fig.cfg  recurrent_fig1.cfg  recurrent_fig2.cfg  samples_dependent.cfg  small_recurrent.cfg  tetrode_ca1_sub.cfg  tetrode_ca1_sub_full.cfg  tetrode_ca3_ca1.cfg  tetrode_ca3_ca1_full.cfg  v_small.cfg
Code/docs/neuroconnect/: atlas.html  compound.html  (+13 more)
Code/examples/: check_distribution.ipynb  check_matrix.ipynb  check_prob_mouse.py  scaling.ipynb  vis_matrix.ipynb
Code/figures/: README.md
Code/neuroconnect/: __init__.py  atlas.py  atlas_graph.py  compound.py  connect_math.py  connectivity_patterns.py  control.py  experiment.py  main.py  matrix.py  monte_carlo.py  mpf_connection.py  nx_graph.py  playground.py  plot.py  plot_graph.py  produce_figures.py  simple_graph.py  stats_convergence_rate.py  stored_results.py
Code/resources/: README.md
docs/: atlas.html  atlas_graph.html  compound.html  connect_math.html  connectivity_patterns.html  control.html  experiment.html  matrix.html  monte_carlo.html  nx_graph.html  playground.html  plot.html  plot_graph.html  produce_figures.html  simple_graph.html  stats_convergence_rate.html  stored_results.html
docs/neuroconnect/: compound.html  control.html  index.html  nx_graph.html  playground.html  produce_figures.html  test.html
