[metadata]
name = neuroconnect
url = https://github.com/seankmartin/NeuralConnections
download_url = https://github.com/seankmartin/NeuralConnections
license = GNU GPL
license_file = LICENSE
description = Probability of chemical synaptic connections across brain regions 
long_description = file: README.md
long_description_content_type = text/markdown
author = Sean K. Martin
author_email = martins7@tcd.ie
project_urls = 
    Bug Tracker = https://github.com/seankmartin/NeuralConnections/issues
    Documentation = https://seankmartin.github.io/NeuralConnections/
classifiers =
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Windows
keywords = neuroscience, network, gui, api
version = 0.0.1

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    tqdm
    mpmath
    networkx
    numpy
    matplotlib
    scipy
    skm_pyutils
    pathos
    pandas
    seaborn
    pyqt5
    dictances
    bg-atlasapi
    brainrender
    vedo
    ONE-api
    hilbertcurve
    typer
package_dir =
    =Code

# add your package requirements here

[options.packages.find]
where = Code

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
docs =
    pdoc3

[options.entry_points]
console_scripts = 
    neuroconnect = neuroconnect.control:run